src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>C501_CS_Created_By_Contact_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag monitoring whether the contact was created by the Contact Subscription process</description>
        <label>Created By Contact Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_CS_Group__c</fullName>
        <label>Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_CS_Sub_Group__c</fullName>
        <label>Sub Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Case_Safe_Contact_ID__c</fullName>
        <description>18 digits</description>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dietary_Restrictions__c</fullName>
        <label>Dietary Restrictions</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Subscription</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>My_Missing_Organizations</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.ACCOUNT_ID</field>
            <operation>equals</operation>
        </filters>
        <label>My Missing Organizations</label>
    </listViews>
    <listViews>
        <fullName>Pending_Subscription</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Has_Subscription__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Missing Subscriptions</label>
    </listViews>
</CustomObject>